2004-11-27  Benoît Dejean  <tazforever@dlfp.org>

	* src/procactions.c: (renice_single_process): Changed error message.
	Closes #123268.

2004-11-27  Benoît Dejean  <tazforever@dlfp.org>

	* src/interface.c:
	* src/callbacks.c: (kill_process_helper), (cb_renice),
	(cb_end_process), (cb_kill_process),
	(cb_end_process_button_pressed):
	* src/callbacks.h: Removed duplicate callbacks.

	* src/proctable.c: (set_proctree_reorderable), (proctable_new),
	(proctable_search_table): Columns are now reorderable, though i still
	don't know how to save/restore user-defined order. See #125857.
	Right-align some columns (memory and CPU). See #122766.
	
	* src/util.c: (_procman_array_gettext_init):
	* src/util.h: Added.

2004-11-24  Christoffer Olsen  <co@deworks.net>

	* Bug Buddy can now identify procman's version
	automagically by the X-GNOME-Bugzilla-Version header.
	* configure.in: Added *.desktop.in to AC_OUTPUT
	* gnome-system-monitor.desktop.in: Moved to *.desktop.in.in
	* gnome-system-monitor.desktop.in.in: Added 
	X-GNOME-Bugzilla-Version header
	* po/POTFILES.in: References *.desktop.in.in instead of *.desktop.in

2004-11-24  Benoît Dejean  <tazforever@dlfp.org>

	* src/interface.c: (toggle_infoview): Fixed (More|Less) labels.
	
	* src/procman.c: Added missing #include for old libgtop.

2004-11-24  Benoît Dejean  <tazforever@dlfp.org>

	* src/favorites.c: (add_single_to_blacklist):
	* src/prettytable.c: (new_application):
	* src/proctable.c: (proctable_free_info), (get_process_status),
	(find_parent), (insert_info_to_tree), (remove_children_from_tree),
	(remove_info_from_tree), (update_info), (get_info), (refresh_list),
	(proctable_search_table):
	* src/procman.h: ProcInfo is a bit smaller (on my ppc32 160B -> 128B).
	Renamed some members and added bitfield.
	Removed .parent_pid as we already have it though self->parent->pid.
	The .status string is now shared (no need to allocate/free anymore).
	
	(let say we have 200 running process, we've saved 30B * 200 = 6KB, wow !)