@@ -1,5 +1,17 @@
 2004-11-27  Benoît Dejean  <tazforever@dlfp.org>
 
+	* src/callbacks.c: (cb_about_activate), (compare_disks),
+	(add_new_disks):
+	* src/interface.c: (sort_bytes), (create_sys_view):
+	* src/proctable.c:
+	* src/util.h: Added a free column in the device view. Patch from Paul
+	Goergler <fluf at dlfp dot org>.
+	Closes #151722.
+	Misc cleanups.
+	Removed some i18n strings.
+
+2004-11-27  Benoît Dejean  <tazforever@dlfp.org>
+
 	* src/procactions.c: (renice_single_process): Changed error message.
 	Closes #123268.
 
